--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site pessoal | Henrique</title>
 </head>
+<style>
+
+* {
+
+    margin: 0 auto;
+    
+}
+
+</style>
 <body>
     <h1>Olá, Mundo. Essa é a primeira versão do meu blog pessoal.</h1>
     <h3>20 de março de 2022</h3>
