--- a/index.html
+++ b/index.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site pessoal | Henrique</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Página Inicial | Henrique</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<style>
-
-* {
-
-    width: 700px; 
-    margin-left: auto;
-    margin-right: auto; 
-    
-}
-
-
-</style>
 <body>
-    <h1>Site Pessoal | Henrique</h1>
-    <h3><a href="./blog/index.html">Veja meu Blog</a>    <a href="./projetos/index.html">Veja meus projetos</a></h3>
+    <img src="image.webp" class="image">
+    <div class="text">
+        <h1>Henrique</h1>
+        <p>Site pessoal sobre programação<br>Inspirado em <a href="https://filipedeschamps.com.br/">Filipe Deschamps</a><br><a href="/old">Ver versão antiga</a></p>
+    </div>
+    <br>
+    <div class="containers">
+        <a href="/blog">
+        <div class="container1">
+            <a href="/blog">
+                <b><h3>Blog</h3></b>
+                <p>Postagens sobre tecnologia em geral</p>
+        </div></a>
+        <div class="container2">
+            <a href="javascript:alert('Em breve')" class="href-container2">
+                <b><h3>Fórum</h3></b>
+                <p>Fórum sobre tecnologia em geral<br></p>
+        </div></a>
+    </div>
 </body>
 </html>
