--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <b><h3>Fórum</h3></b>
                 <p>Fórum sobre tecnologia em geral<br></p>
         </div></a>
+        <div class="container3">
+            <a href="/sobre" class="href-container2">
+                <b><h3>Sobre</h3></b>
+                <p>Pequeno texto sobre o site, seu criador e suas intenções<br></p>
+        </div></a>
+        </div>
     </div>
 </body>
 </html>
