--- a/sobre/index.html
+++ b/sobre/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>Sobre | Henrique</title>
+</head>
+<header>
+    <div class="bootstrap-icon">
+        <a href=".." title="" class="btn btn-primary">
+            <img src="../static/voltar.png" width="25px" height="25px"><span class="icon"> Voltar</span></a>
+    </div>
 
+</header>
+<body>
+    <h1 class="sobre">Sobre</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, distinctio amet saepe consequuntur voluptatibus pariatur labore nisi, eum officia totam optio ad asperiores culpa sed ex fugit architecto dicta ipsam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, soluta ea corporis rerum deleniti quisquam id porro, libero dignissimos eveniet, dolores consequuntur consectetur laudantium ad consequatur non perferendis quos. Distinctio?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi accusantium quis at voluptates cumque fugiat libero nam tempore, eius doloremque eum fuga quas voluptatem harum dolorum autem ea id temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cumque explicabo consectetur laborum? Soluta nesciunt velit recusandae similique architecto, expedita est possimus deserunt modi iure eos animi eius pariatur aliquid.</p>
+    <marker>• Marker 1</marker><br>
+    <marker>• Marker 2</marker><br>
+    <marker>• Marker 3</marker><br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptate dolores ipsum sequi hic? Reiciendis commodi consequatur laboriosam vel eligendi adipisci repellendus nihil, odio ipsa atque! Officiis nam at officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptates adipisci explicabo eveniet nisi perferendis neque, non ad aliquid laudantium excepturi accusantium cupiditate magni praesentium, nulla tempora, provident ipsam sequi.</p>
+</body>
+</html>
