--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div></a>
         <div class="container2">
             <a href="javascript:alert('Em breve')" class="href-container2">
-                <b><h3>Fórum</h3></b>
-                <p>Fórum sobre tecnologia em geral<br></p>
+                <b><h3>Projetos</h3></b>
+                <p>Lista dos meus projetos<br></p>
         </div></a>
         <div class="container3">
             <a href="/sobre" class="href-container2">
