--- a/old/mar-2022/index.html
+++ b/old/mar-2022/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
 
-<h3>Vendo versão antiga do site (março de 2022)<br><a href="..">Voltar para a nova</a></h3>
+<h3>Vendo versão antiga do site (março de 2022)<br><a href="../..">Voltar para a nova</a></h3>
 
 </header>
 <style>
