--- a/old/mar-2022/projetos/index.html
+++ b/old/mar-2022/projetos/index.html
@@ -7,6 +7,10 @@
     <title>Oops</title>
 </head>
 <body>
-    Hey, a aba de projetos nunca foi criada em março de 2022, a versão na qual você está vendo o site. Mas provavelmente ela já está pronta caso você esteja vendo isso num futuro distante!
+    Oops!<br>
+    Você está vendo uma versão antiga o suficiente do site na qual a aba "projetos" que você está acessando infelizmente nunca foi criada.
+    Mas você pode tentar <a href="/projetos/index.html">ver a aba de projetos hoje em dia clicando aqui</a>.
+    <br>
+    Escrito em 13 de abril de 2022 às 23:12.
 </body>
 </html>
