--- a/interactive/shell.html
+++ b/interactive/shell.html
@@ -1,5 +1,27 @@
-<style>
-form {
+
+<!DOCTYPE html>
+<html lang='en' class=''>
+
+<head>
+
+  <meta charset='UTF-8'>
+  <title>CodePen Demo</title>
+
+  <meta name="robots" content="noindex">
+
+  <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+  <link rel="mask-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">
+  <link rel="canonical" href="https://codepen.io/jcubic/pen/WZvYGj">
+
+  
+  
+<link rel="stylesheet" href="https://unpkg.com/shell.js@1.0.5/dist/css/shell.min.css">
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/cupertino/jquery-ui.css">
+<link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css">
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+  <style class="INLINE_PEN_STYLESHEET_ID">
+    form {
     margin: 10px;
 }
 body .shell {
@@ -104,8 +126,16 @@ body .shell .terminal .cmd {
 {
 	background-color: var(--color, #aaa);
 }
-</style>
-<form>
+  </style>
+
+  
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeConsoleRunner-7549a40147ccd0ba0a6b5373d87e770e49bb4689f1c2dc30cccc7463f207f997.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRefreshCSS-4793b73c6332f7f14a9b6bba5d5e62748e9d1bd0b5c52d7af6376f3d1c625d7e.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRuntimeErrors-4f205f2c14e769b448bcf477de2938c681660d5038bc464e3700256713ebe261.js"></script>
+</head>
+
+<body>
+  <form>
     <label for="type">Window Type:</label>
     <select id="type">
         <option value="osx">osx</option>
@@ -130,183 +160,23 @@ body .shell .terminal .cmd {
                 <i class="fa fa-plus"></i>
             </a>
         </div>
-        <div class="title">user@host: ~</div>
+        <div class="title"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="3c494f594e7c54534f48">[email&#160;protected]</a>: ~</div>
     </div>
     <div class="content"></div>
 </div>
 
-<script>
-var shell = $('.shell').resizable({
-	minHeight: 108,
-	minWidth: 250
-}).draggable({
-    handle: '> .status-bar .title'
-});
-// Fake in memory filesystem
-var fs = {
-    'projects': {
-        'baz.txt': 'Hello this is file baz.txt',
-        'quux.txt': "Lorem Ispum (quux.txt)",
-        'foo.txt': "Hello, World!",
-        'bar.txt': "Wellcome to the bar",
-        "terminal": {
-            "foo": {
-                "bar.txt": "hello bar",
-                "baz.txt": "baz content"
-            }
-        }
-    }
-};
+  
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/jcubic/static/js/wcwidth.js"></script>
+<script src="https://unpkg.com/jquery.terminal/js/jquery.mousewheel-min.js"></script>
+<script src="https://unpkg.com/js-polyfills/keyboard.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://codepen.io/jcubic/pen/WZjbgq.js"></script>
+<script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
+<script src="https://unpkg.com/resize-observer-polyfill@1.5.1/dist/ResizeObserver.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/aaronbarker/css-variables-polyfill@master/css-var-polyfill.js"></script>
+  <script  src="https://cdpn.io/cpe/boomboom/pen.js?key=pen.js-e653e1e8-63ea-8336-b06e-a8142567843e" crossorigin></script>
+</body>
 
-var path = [];
-var cwd = fs;
-function restore_cwd(fs, path) {
-    path = path.slice();
-    while (path.length) {
-        var dir_name = path.shift();
-        if (!is_dir(fs[dir_name])) {
-            throw new Error('Internal Error Invalid directory ' +
-                            $.terminal.escape_brackets(dir_name));
-        }
-        fs = fs[dir_name];
-    }
-    return fs;
-}
-function is_dir(obj) {
-    return typeof obj === 'object';
-}
-function is_file(obj) {
-    return typeof obj === 'string';
-}
-var commands = {
-    cd: function(dir) {
-        this.pause();
-        if (dir === '/') {
-            path = [];
-            cwd = restore_cwd(fs, path);
-        } else if (dir === '..') {
-            if (path.length) {
-                path.pop(); // remove from end
-                cwd = restore_cwd(fs, path);
-            }
-        } else if (dir.match(/\//)) {
-            var p = dir.replace(/\/$/, '').split('/').filter(Boolean);
-            if (dir[0] !== '/') {
-                p = path.concat(p);
-            }
-            cwd = restore_cwd(fs, p);
-            path = p;
-        } else if (!is_dir(cwd[dir])) {
-            this.error($.terminal.escape_brackets(dir) + ' is not a directory');
-        } else {
-            cwd = cwd[dir];
-            path.push(dir);
-        }
-        this.resume();
-    },
-    ls: function() {
-        if (!is_dir(cwd)) {
-            throw new Error('Internal Error Invalid directory');
-        }
-        var dir = Object.keys(cwd).map(function(key) {
-            if (is_dir(cwd[key])) {
-                return key + '/';
-            }
-            return key;
-        });
-        this.echo(dir.join('\n'));
-    },
-    cat: function(file) {
-        if (!is_file(cwd[file])) {
-            this.error($.terminal.escape_brackets(file) + " don't exists");
-        } else {
-            this.echo(cwd[file]);
-        }
-    },
-    help: function() {
-        this.echo('Available commands: ' + Object.keys(commands).join(', '));
-    }
-};
-function completion(string, callback) {
-    var command = this.get_command();
-    var cmd = $.terminal.parse_command(command);
-    function dirs(cwd) {
-        return Object.keys(cwd).filter(function(key) {
-            return is_dir(cwd[key]);
-        }).map(function(dir) {
-            return dir + '/';
-        });
-    }
-    if (cmd.name === 'ls') {
-        callback([]);
-    } else if (cmd.name === 'cd') {
-        var p = string.split('/').filter(Boolean);
-        if (p.length === 1) {
-            if (string[0] === '/') {
-                callback(dirs(fs));
-            } else {
-                callback(dirs(cwd));
-            }
-        } else {
-            if (string[0] !== '/') {
-                p = path.concat(p);
-            }
-            if (string[string.length - 1] !== '/') {
-                p.pop();
-            }
-            var prefix = string.replace(/\/[^/]*$/, '');
-            callback(dirs(restore_cwd(fs, p)).map(function(dir) {
-                return prefix + '/' + dir;
-            }));
-        }
-    } else if (cmd.name === 'cat') {
-        var files = Object.keys(cwd).filter(function(key) {
-            return is_file(cwd[key]);
-        });
-        callback(files);
-    } else {
-        callback(Object.keys(commands));
-    }
-}
-var term = $('.content').terminal(commands, {
-    prompt: prompt(),
-    completion: completion,
-    // detect iframe codepen preview
-    enabled: $('body').attr('onload') === undefined,
-});
-// for codepen preview
-if (!term.enabled()) {
-    term.find('.cursor').addClass('blink');
-}
-function prompt(type) {
-    return function(callback) {
-        var prompt;
-        if (type === 'windows') {
-            prompt = 'C:\\' + path.join('\\') + '> ';
-        } else {
-            prompt = 'user@host:/' + path.join('/') + '$ ';
-        }
-        $('.title').html(prompt);
-        callback(prompt);
-    };
-}
-$('#type').on('change', function() {
-    shell.removeClass('osx windows ubuntu default custom').addClass(this.value);
-    term.toggleClass('underline-animation', this.value == 'windows');
-    term.set_prompt(prompt(this.value));
-});
-$('#dark').on('change', function() {
-    shell.removeClass('dark light');
-    if (this.checked) {
-        shell.addClass('dark');
-    } else {
-        shell.addClass('light');
-    }
-});
-$('#type, #dark').on('change', function() {
-    setTimeout(function() {
-        term.focus();
-    }, 400)
-});
-github && github('jcubic/jquery.terminal');
-</script>
+</html>
