--- a/arquivos/meu-estado.html
+++ b/arquivos/meu-estado.html
@@ -12,10 +12,10 @@ const ctx = document.getElementById('myChart').getContext('2d');
 const myChart = new Chart(ctx, {
     type: 'line',
     data: {
-        labels: ['31/12/2021', '27/08', '28/08', '29/08', '30/8', '31/08', '01/09', '02/09', '03/09', '04/09', '05/09', '06/09', '07/09', '08/09', '10/09', '11/09', '12/09', '25/09'],
+        labels: ['31/12/2021', '27/08', '28/08', '29/08', '30/8', '31/08', '01/09', '02/09', '03/09', '04/09', '05/09', '06/09', '07/09', '08/09', '10/09', '11/09', '12/09', '25/09', '26/09'],
         datasets: [{
             label: 'Humor',
-            data: [10, 4, 6, 3, 1, 2, 5.5, 3.5, 3.5, 4.5, 4, 5, 4.5, 4.5, 3, 2.5, 4, 4.5],
+            data: [10, 4, 6, 3, 1, 2, 5.5, 3.5, 3.5, 4.5, 4, 5, 4.5, 4.5, 3, 2.5, 4, 4.5, 5],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
